[tool.poetry]
name = "wallaby"
version = "0.1.0"
description = "A markup language that compiles to sound."
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "GPL-v3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
musicpy = "^5.34"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "import-error",
]